--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -55,7 +55,7 @@
                         </p:row>
                     </p:panelGrid>
                     <p:commandButton action="#{ProjekteForm.filegroupSave()}"
-                                     update="projectEditForm"
+                                     update="editForm"
                                      oncomplete="PF('editFileGroupDialog').hide()"
                                      value="#{msgs.uebernehmen}"
                                      styleClass="button-filled-blue right"/>
