--- a/Kitodo/src/main/webapp/pages/activeUsers.xhtml
+++ b/Kitodo/src/main/webapp/pages/activeUsers.xhtml
@@ -12,32 +12,32 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-            <p:panel styleClass="content-header">
-                <h3>#{msgs.aktiveBenutzer}</h3>
-            </p:panel>
-            <p:tabView id="activeUsersTabView">
-                <p:tab id="activeUsersTab" title="#{msgs.userList}">
-                    <h:form id="activeUsersForm">
-                        <p:poll interval="10" update="tableActiveSessions"/>
-                        <p:dataTable id="tableActiveSessions" value="#{SessionForm.activeSessions}" var="userItem">
-                            <p:column id="userName" headerText="#{msgs.benutzer}">
-                                <h:outputText value="#{userItem.userName}"/>
-                            </p:column>
-                            <p:column id="lastRequest" headerText="#{msgs.letzterZugriff}">
-                                <h:outputText value="#{userItem.lastRequest}"/>
-                            </p:column>
-                        </p:dataTable>
-                    </h:form>
-                </p:tab>
-            </p:tabView>
-        </p:panel>
+    <ui:define name="contentHeader">
+        <h3>#{msgs.aktiveBenutzer}</h3>
     </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView id="activeUsersTabView">
+            <p:tab id="activeUsersTab" title="#{msgs.userList}">
+                <h:form id="activeUsersForm">
+                    <p:poll interval="10" update="tableActiveSessions"/>
+                    <p:dataTable id="tableActiveSessions" value="#{SessionForm.activeSessions}" var="userItem">
+                        <p:column id="userName" headerText="#{msgs.benutzer}">
+                            <h:outputText value="#{userItem.userName}"/>
+                        </p:column>
+                        <p:column id="lastRequest" headerText="#{msgs.letzterZugriff}">
+                            <h:outputText value="#{userItem.lastRequest}"/>
+                        </p:column>
+                    </p:dataTable>
+                </h:form>
+            </p:tab>
+        </p:tabView>
+    </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><a href="">#{msgs.aktiveBenutzer}</a></li>
