--- a/Kitodo/src/main/webapp/pages/help.xhtml
+++ b/Kitodo/src/main/webapp/pages/help.xhtml
@@ -15,25 +15,22 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui"
-        template="/WEB-INF/templates/base.xhtml">
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-
-            <p:panel styleClass="content-header">
-                <h3>#{msgs.help}</h3>
-            </p:panel>
-
-            <p:tabView>
-                <p:tab title="#{msgs.bedienungshinweise}">
-                    <p:panel styleClass="text-align: justify;">
-                        <h:outputText styleClass="text-align: justify;"
-                                      value="#{msgs.bedienungshinweiseText}" escape="false"/>
-                    </p:panel>
-                </p:tab>
-            </p:tabView>
-
-        </p:panel>
+        template="/WEB-INF/templates/baseListView.xhtml">
+    <ui:define name="contentHeader">
+        <h3>#{msgs.help}</h3>
     </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView>
+            <p:tab title="#{msgs.bedienungshinweise}">
+                <p:panel styleClass="text-align: justify;">
+                    <h:outputText styleClass="text-align: justify;"
+                                  value="#{msgs.bedienungshinweiseText}" escape="false"/>
+                </p:panel>
+            </p:tab>
+        </p:tabView>
+    </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><a href="">#{msgs.help}</a></li>
