--- a/Kitodo/src/main/webapp/pages/indexingPage.xhtml
+++ b/Kitodo/src/main/webapp/pages/indexingPage.xhtml
@@ -12,128 +12,135 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui"
         xmlns:o="http://omnifaces.org/ui">
-    <ui:define name="content">
-        <p:importEnum type="org.kitodo.enums.ObjectType" var="objectTypeEnum"/>
-        <p:panel id="listWrapper">
-            <h:outputScript name="js/indexing.js"/>
-            <h:form id="indexing_form">
-                <ui:fragment rendered="#{empty indexingForm.serverInformation}">
-                    <h:outputText value="The elastic search server is not running."/>
-                </ui:fragment>
-                <ui:fragment rendered="#{not empty indexingForm.serverInformation}">
-                    <p:panel widgetVar="indexingTable" id="indexingTable">
-                        <table>
-                            <thead>
-                            <tr>
-                                <th colspan="3"><h:outputText value="#{msgs.mapping}"/></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <!-- Create Mapping -->
-                            <tr>
-                                <td colspan="2">
-                                    <p:commandButton widgetVar="createMapping"
-                                                     id="createMappingButton"
-                                                     value="#{msgs.createMapping}"
-                                                     style="width: 100%;"
-                                                     action="#{indexingForm.createMapping(true)}"
-                                                     disabled="#{indexingForm.indexExists() or indexingForm.indexingInProgress()}"
-                                                     update="indexingTable"
-                                                     onclick="createMapping(#{indexingForm.objectTypesAsJson});"/>
-                                </td>
-                                <td>
-                                    <p:graphicImage id="create-mapping-loading" alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px; display: none;"/>
-                                    <p:graphicImage id="create-mapping-error" alt="failed" value="/pages/images/fail.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'MAPPING_ERROR'}"/>
-                                    <p:graphicImage id="create-mapping-success" alt="success" value="/pages/images/success.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'MAPPING_SUCCESS'}"/>
-                                </td>
-                            </tr>
-                            <!-- Delete Index -->
-                            <tr>
-                                <td colspan="2">
-                                    <p:commandButton widgetVar="deleteIndex"
-                                                     id="deleteIndexButton"
-                                                     value="#{msgs.deleteIndex}"
-                                                     style="width: 100%;"
-                                                     action="#{indexingForm.deleteIndex(true)}"
-                                                     disabled="#{!indexingForm.indexExists() or indexingForm.indexingInProgress()}"
-                                                     update="indexingTable"
-                                                     onclick="return confirm('Do you REALLY want to delete the whole index?');deleteIndex(#{indexingForm.objectTypesAsJson});"/>
-                                </td>
-                                <td>
-                                    <p:graphicImage id="delete-index-loading" alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px; display: none;"/>
-                                    <p:graphicImage id="delete-index-error" alt="failed" value="/pages/images/fail.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'DELETE_ERROR'}"/>
-                                    <p:graphicImage id="delete-index-success" alt="success" value="/pages/images/success.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'DELETE_SUCCESS'}"/>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <table id="indexingTable">
-                            <thead>
-                            <tr>
-                                <th><h:outputText value="#{msgs.objectType}"/></th>
-                                <th><h:outputText value="#{msgs.startIndexing}"/></th>
-                                <th><h:outputText value="#{msgs.progress}"/></th>
-                                <th><h:outputText value="#{msgs.indexedEntries}"/></th>
-                                <th><h:outputText value="#{msgs.status}"/></th>
-                            </tr>
-                            </thead>
-                            <tbody>
+    <ui:define name="contentHeader">
+        <h3>#{msgs.indexing}</h3>
+    </ui:define>
 
-                            <ui:repeat value="#{indexingForm.objectTypes}" var="objectType">
-                                <ui:include src="inc_indexing/indexingRow.xhtml">
-                                    <ui:param name="objectType" value="#{objectType}"/>
-                                </ui:include>
-                            </ui:repeat>
+    <ui:define name="pageTabView">
+        <p:tabView id="indexingTabView">
+            <p:tab id="indexingTab" title="#{msgs.indexing}">
+                <p:importEnum type="org.kitodo.enums.ObjectType" var="objectTypeEnum"/>
+                <p:panel id="listWrapper">
+                    <h:outputScript name="js/indexing.js"/>
+                    <h:form id="indexing_form">
+                        <ui:fragment rendered="#{empty indexingForm.serverInformation}">
+                            <h:outputText value="The elastic search server is not running."/>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{not empty indexingForm.serverInformation}">
+                            <p:panel widgetVar="indexingTable" id="indexingTable">
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th colspan="3"><h:outputText value="#{msgs.mapping}"/></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <!-- Create Mapping -->
+                                    <tr>
+                                        <td colspan="2">
+                                            <p:commandButton widgetVar="createMapping"
+                                                             id="createMappingButton"
+                                                             value="#{msgs.createMapping}"
+                                                             style="width: 100%;"
+                                                             action="#{indexingForm.createMapping(true)}"
+                                                             disabled="#{indexingForm.indexExists() or indexingForm.indexingInProgress()}"
+                                                             update="indexingTable"
+                                                             onclick="createMapping(#{indexingForm.objectTypesAsJson});"/>
+                                        </td>
+                                        <td>
+                                            <p:graphicImage id="create-mapping-loading" alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px; display: none;"/>
+                                            <p:graphicImage id="create-mapping-error" alt="failed" value="/pages/images/fail.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'MAPPING_ERROR'}"/>
+                                            <p:graphicImage id="create-mapping-success" alt="success" value="/pages/images/success.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'MAPPING_SUCCESS'}"/>
+                                        </td>
+                                    </tr>
+                                    <!-- Delete Index -->
+                                    <tr>
+                                        <td colspan="2">
+                                            <p:commandButton widgetVar="deleteIndex"
+                                                             id="deleteIndexButton"
+                                                             value="#{msgs.deleteIndex}"
+                                                             style="width: 100%;"
+                                                             action="#{indexingForm.deleteIndex(true)}"
+                                                             disabled="#{!indexingForm.indexExists() or indexingForm.indexingInProgress()}"
+                                                             update="indexingTable"
+                                                             onclick="return confirm('Do you REALLY want to delete the whole index?');deleteIndex(#{indexingForm.objectTypesAsJson});"/>
+                                        </td>
+                                        <td>
+                                            <p:graphicImage id="delete-index-loading" alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px; display: none;"/>
+                                            <p:graphicImage id="delete-index-error" alt="failed" value="/pages/images/fail.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'DELETE_ERROR'}"/>
+                                            <p:graphicImage id="delete-index-success" alt="success" value="/pages/images/success.svg" style="max-height: 20px;" rendered="#{!indexingForm.indexingInProgress() and indexingForm.indexState == 'DELETE_SUCCESS'}"/>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <table id="indexingTable">
+                                    <thead>
+                                    <tr>
+                                        <th><h:outputText value="#{msgs.objectType}"/></th>
+                                        <th><h:outputText value="#{msgs.startIndexing}"/></th>
+                                        <th><h:outputText value="#{msgs.progress}"/></th>
+                                        <th><h:outputText value="#{msgs.indexedEntries}"/></th>
+                                        <th><h:outputText value="#{msgs.status}"/></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
 
-                            <tr>
-                                <td colspan="6"><hr/></td>
-                            </tr>
+                                    <ui:repeat value="#{indexingForm.objectTypes}" var="objectType">
+                                        <ui:include src="inc_indexing/indexingRow.xhtml">
+                                            <ui:param name="objectType" value="#{objectType}"/>
+                                        </ui:include>
+                                    </ui:repeat>
 
-                            <!-- Index all object types -->
-                            <tr>
-                                <td><h:outputText value="#{msgs.wholeIndex}"/></td>
-                                <td>
-                                    <p:commandButton widgetVar="startIndexingAll"
-                                                     id="startIndexingAllButton"
-                                                     onclick="PF('allProgress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
-                                                     value="#{msgs.startIndexing}"
-                                                     action="#{indexingForm.startAllIndexing()}"
-                                                     disabled="#{!indexingForm.indexExists() or (indexingForm.indexingInProgress())}"/>
-                                </td>
-                                <td>
-                                    <p:progressBar widgetVar="allProgress"
-                                                   ajax="true"
-                                                   value="#{indexingForm.allIndexingProgress}"
-                                                   labelTemplate="{value}%"
-                                                   global="false"
-                                                   style="width: 100px;">
-                                    </p:progressBar>
-                                </td>
-                                <td style="text-align: right;">
-                                    <h:outputText value="#{indexingForm.allIndexed} / #{indexingForm.totalCount}"/>
-                                </td>
-                                <td>
-                                    <p:graphicImage alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px" rendered="#{indexingForm.indexingInProgress()}"/>
-                                    <p:graphicImage alt="failed" value="/pages/images/fail.svg" style="max-height: 20px" rendered="#{indexingForm.allObjectsIndexingState == indexingForm.indexingFailedState}"/>
-                                    <p:graphicImage alt="success" value="/pages/images/success.svg" style="max-height: 20px" rendered="#{indexingForm.allObjectsIndexingState == indexingForm.indexingSuccessfulState and not indexingForm.indexingInProgress()}" />
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <h:outputText value="Indexing started by '#{LoginForm.myBenutzer.surname}, #{LoginForm.myBenutzer.name}' at #{indexingForm.indexingStartedTime}" rendered="#{not empty indexingForm.indexingStartedTime}"/>
-                    </p:panel>
-                    <p:commandButton class="refreshTable" update="indexingTable" style="visibility: hidden;"/>
-                    <p:poll widgetVar="progressPoll" update="indexingTable" interval="1" autoStart="false"/>
-                    <o:socket channel="togglePollingChannel" onmessage="toggleProgressPolling" />
-                </ui:fragment>
-            </h:form>
+                                    <tr>
+                                        <td colspan="6"><hr/></td>
+                                    </tr>
 
-        </p:panel>
+                                    <!-- Index all object types -->
+                                    <tr>
+                                        <td><h:outputText value="#{msgs.wholeIndex}"/></td>
+                                        <td>
+                                            <p:commandButton widgetVar="startIndexingAll"
+                                                             id="startIndexingAllButton"
+                                                             onclick="PF('allProgress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
+                                                             value="#{msgs.startIndexing}"
+                                                             action="#{indexingForm.startAllIndexing()}"
+                                                             disabled="#{!indexingForm.indexExists() or (indexingForm.indexingInProgress())}"/>
+                                        </td>
+                                        <td>
+                                            <p:progressBar widgetVar="allProgress"
+                                                           ajax="true"
+                                                           value="#{indexingForm.allIndexingProgress}"
+                                                           labelTemplate="{value}%"
+                                                           global="false"
+                                                           style="width: 100px;">
+                                            </p:progressBar>
+                                        </td>
+                                        <td style="text-align: right;">
+                                            <h:outputText value="#{indexingForm.allIndexed} / #{indexingForm.totalCount}"/>
+                                        </td>
+                                        <td>
+                                            <p:graphicImage alt="in progress" value="/pages/images/ajax-loader.gif" style="max-height: 20px" rendered="#{indexingForm.indexingInProgress()}"/>
+                                            <p:graphicImage alt="failed" value="/pages/images/fail.svg" style="max-height: 20px" rendered="#{indexingForm.allObjectsIndexingState == indexingForm.indexingFailedState}"/>
+                                            <p:graphicImage alt="success" value="/pages/images/success.svg" style="max-height: 20px" rendered="#{indexingForm.allObjectsIndexingState == indexingForm.indexingSuccessfulState and not indexingForm.indexingInProgress()}" />
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <h:outputText value="Indexing started by '#{LoginForm.myBenutzer.surname}, #{LoginForm.myBenutzer.name}' at #{indexingForm.indexingStartedTime}" rendered="#{not empty indexingForm.indexingStartedTime}"/>
+                            </p:panel>
+                            <p:commandButton class="refreshTable" update="indexingTable" style="visibility: hidden;"/>
+                            <p:poll widgetVar="progressPoll" update="indexingTable" interval="1" autoStart="false"/>
+                            <o:socket channel="togglePollingChannel" onmessage="toggleProgressPolling" />
+                        </ui:fragment>
+                    </h:form>
+                </p:panel>
+            </p:tab>
+        </p:tabView>
     </ui:define>
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
