--- a/Kitodo/src/main/webapp/pages/newTaskManager.xhtml
+++ b/Kitodo/src/main/webapp/pages/newTaskManager.xhtml
@@ -12,75 +12,73 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-            <p:panel styleClass="content-header">
-                <h3>
-                    <h:outputText value="#{msgs.taskmanager}"/>
-                </h3>
-            </p:panel>
-            <p:tabView id="modulesTabView">
-                <p:tab id="modulesTab" title="#{msgs.modules}">
-                    <p:dataTable var="item"
-                                 value="#{LongRunningTasksForm.tasks}">
-                        <p:column headerText="#{msgs.titel}">
-                            <h:outputText value="#{item.name}"/>
-                        </p:column>
-                        <p:column headerText="#{msgs.fortschritt}">
-                            <h:outputText value="#{item.progress}"/>
-                        </p:column>
-                        <p:column headerText="#{msgs.status}">
-                            <h:outputText value="#{item.stateDescription}"/>
-                        </p:column>
-                        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-                            <!-- move up -->
-                            <p:commandLink action="#{LongRunningTasksForm.moveTaskUp}"
-                                           title="#{msgs.start}">
-                                <i class="fa fa-long-arrow-up fa-lg"/>
-                                <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
-                                                             value="#{item}"/>
-                            </p:commandLink>
-                            <!-- move down -->
-                            <p:commandLink action="#{LongRunningTasksForm.moveTaskDown}"
-                                           title="#{msgs.start}">
-                                <i class="fa fa-long-arrow-down"/>
-                                <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
-                                                             value="#{item}"/>
-                            </p:commandLink>
-                            <!-- start -->
-                            <p:commandLink action="#{LongRunningTasksForm.executeTask}"
-                                           title="#{msgs.start}"
-                                           rendered="#{item.startable}">
-                                <i class="fa fa-play fa-lg"/>
-                                <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
-                                                             value="#{item}"/>
-                            </p:commandLink>
-                            <!-- stop -->
-                            <p:commandLink action="#{LongRunningTasksForm.cancelTask}"
-                                           title="#{msgs.stop}"
-                                           rendered="#{item.stoppable}">
-                                <i class="fa fa-stop fa-lg"/>
-                                <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
-                                                             value="#{item}"/>
-                            </p:commandLink>
-                            <!-- delete -->
-                            <p:commandLink action="#{LongRunningTasksForm.removeTask}"
-                                           title="#{msgs.loeschen}">
-                                <i class="fa fa-trash-o fa-lg"/>
-                                <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
-                                                             value="#{item}"/>
-                            </p:commandLink>
-                        </p:column>
-                    </p:dataTable>
-                </p:tab>
-            </p:tabView>
-        </p:panel>
+    <ui:define name="contentHeader">
+        <h3><h:outputText value="#{msgs.taskmanager}"/></h3>
     </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView id="modulesTabView">
+            <p:tab id="modulesTab" title="#{msgs.modules}">
+                <p:dataTable var="item"
+                             value="#{LongRunningTasksForm.tasks}">
+                    <p:column headerText="#{msgs.titel}">
+                        <h:outputText value="#{item.name}"/>
+                    </p:column>
+                    <p:column headerText="#{msgs.fortschritt}">
+                        <h:outputText value="#{item.progress}"/>
+                    </p:column>
+                    <p:column headerText="#{msgs.status}">
+                        <h:outputText value="#{item.stateDescription}"/>
+                    </p:column>
+                    <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+                        <!-- move up -->
+                        <p:commandLink action="#{LongRunningTasksForm.moveTaskUp}"
+                                       title="#{msgs.start}">
+                            <i class="fa fa-long-arrow-up fa-lg"/>
+                            <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
+                                                         value="#{item}"/>
+                        </p:commandLink>
+                        <!-- move down -->
+                        <p:commandLink action="#{LongRunningTasksForm.moveTaskDown}"
+                                       title="#{msgs.start}">
+                            <i class="fa fa-long-arrow-down"/>
+                            <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
+                                                         value="#{item}"/>
+                        </p:commandLink>
+                        <!-- start -->
+                        <p:commandLink action="#{LongRunningTasksForm.executeTask}"
+                                       title="#{msgs.start}"
+                                       rendered="#{item.startable}">
+                            <i class="fa fa-play fa-lg"/>
+                            <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
+                                                         value="#{item}"/>
+                        </p:commandLink>
+                        <!-- stop -->
+                        <p:commandLink action="#{LongRunningTasksForm.cancelTask}"
+                                       title="#{msgs.stop}"
+                                       rendered="#{item.stoppable}">
+                            <i class="fa fa-stop fa-lg"/>
+                            <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
+                                                         value="#{item}"/>
+                        </p:commandLink>
+                        <!-- delete -->
+                        <p:commandLink action="#{LongRunningTasksForm.removeTask}"
+                                       title="#{msgs.loeschen}">
+                            <i class="fa fa-trash-o fa-lg"/>
+                            <f:setPropertyActionListener target="#{LongRunningTasksForm.task}"
+                                                         value="#{item}"/>
+                        </p:commandLink>
+                    </p:column>
+                </p:dataTable>
+            </p:tab>
+        </p:tabView>
+    </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><a href="">#{msgs.taskmanager}</a></li>
