--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -12,7 +12,7 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseEditView.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
@@ -22,45 +22,41 @@
         <f:viewAction action="#{ProzessverwaltungForm.loadProcess(id)}" />
     </f:metadata>
 
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-            <h:form id="processEditForm">
-                <p:panel styleClass="content-header">
-                    <h3>
-                        <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title}"/>
-                        <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProzessverwaltungForm.process.title}"/>
-                    </h3>
-                    <p:commandButton id="save"
-                                     value="#{msgs.speichern}"
-                                     action="#{ProzessverwaltungForm.saveAndRedirect}"
-                                     icon="fa fa-floppy-o fa-lg"
-                                     iconPos="right"
-                                     onclick="PF('notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
-                                     update="notifications"/>
-                    <p:button id="cancel" value="#{msgs.abbrechen}"
-                              outcome="#{ProzessverwaltungForm.process.template ? 'projects' : 'processes'}"
-                              icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
-                </p:panel>
-                <p:messages autoUpdate="true"/>
-                <p:tabView id="tabs" cache="false">
-                    <p:tab title="#{msgs.prozessDetails}" id="details">
-                        <ui:include src="/WEB-INF/templates/includes/processEdit/details.xhtml"/>
-                    </p:tab>
-                    <p:tab title="#{msgs.arbeitsschritte}" id="taskOrder">
-                        <ui:include src="/WEB-INF/templates/includes/processEdit/taskList.xhtml"/>
-                    </p:tab>
-                    <p:tab title="#{msgs.prozessvorlagen}" id="processTemplates">
-                        <ui:include src="/WEB-INF/templates/includes/processEdit/templateList.xhtml"/>
-                    </p:tab>
-                    <p:tab title="#{msgs.werkstuecke}" id="workpieces">
-                        <ui:include src="/WEB-INF/templates/includes/processEdit/workpieceList.xhtml"/>
-                    </p:tab>
-                    <p:tab title="#{msgs.eigenschaften}" id="properties">
-                        <ui:include src="/WEB-INF/templates/includes/processEdit/propertyList.xhtml"/>
-                    </p:tab>
-                </p:tabView>
-            </h:form>
-        </p:panel>
+    <ui:define name="contentHeader">
+        <h3>
+            <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{not empty ProzessverwaltungForm.process.title}"/>
+            <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{empty ProzessverwaltungForm.process.title}"/>
+        </h3>
+        <p:commandButton id="save"
+                         value="#{msgs.speichern}"
+                         action="#{ProzessverwaltungForm.saveAndRedirect}"
+                         icon="fa fa-floppy-o fa-lg"
+                         iconPos="right"
+                         onclick="PF('notifications').renderMessage({'summary':'#{msgs.processSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
+                         update="notifications"/>
+        <p:button id="cancel" value="#{msgs.abbrechen}"
+                  outcome="#{ProzessverwaltungForm.process.template ? 'projects' : 'processes'}"
+                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+    </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView id="tabs" cache="false">
+            <p:tab title="#{msgs.prozessDetails}" id="details">
+                <ui:include src="/WEB-INF/templates/includes/processEdit/details.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.arbeitsschritte}" id="taskOrder">
+                <ui:include src="/WEB-INF/templates/includes/processEdit/taskList.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.prozessvorlagen}" id="processTemplates">
+                <ui:include src="/WEB-INF/templates/includes/processEdit/templateList.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.werkstuecke}" id="workpieces">
+                <ui:include src="/WEB-INF/templates/includes/processEdit/workpieceList.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.eigenschaften}" id="properties">
+                <ui:include src="/WEB-INF/templates/includes/processEdit/propertyList.xhtml"/>
+            </p:tab>
+        </p:tabView>
     </ui:define>
 
     <ui:define name="dialog">
