--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -12,63 +12,62 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
+
+    <ui:define name="contentHeader">
         <h:outputScript name="js/filter.js" target="body" />
-        <p:panel id="listWrapper">
-            <p:panel styleClass="content-header">
-                <h3>#{msgs.prozessverwaltung}</h3>
-                <h:form id="addForm">
-                    <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
-                        <p:menuitem value="#{msgs.newProcess}" outcome="/pages/processEdit" icon="ui-icon-plusthick" />
-                        <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
-                    </p:menuButton>
-                </h:form>
-                <!-- filters -->
-                <p:button id="search" value="#{msgs.nachEinemBandSuchen}"
-                          icon="fa fa-search" iconPos="right"
-                          styleClass="button-filled-blue" outcome="searchProcess"/>
-                <h:form id="filterMenu">
-                    <div class="ui-inputgroup">
-                        <p:inputText forceId="true" id="filterfield" value="#{ProzessverwaltungForm.filter}" placeholder="#{msgs.filter}"/>
-                        <p:commandButton id="applyFilter" onclick="applyFilter(document.getElementById('filterMenu:filterfield').value)" icon="fa fa-refresh fa-lg" styleClass="button-blue"/>
-                        <p:commandButton id="filterMenuTrigger" icon="fa fa-chevron-down" styleClass="button-filled-blue"/>
-                        <p:overlayPanel for="filterMenuTrigger" my="right top" at="right bottom">
-                            <ul>
+            <h3>#{msgs.prozessverwaltung}</h3>
+            <h:form id="addForm">
+                <p:menuButton value="#{msgs.newElement}" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green">
+                    <p:menuitem value="#{msgs.newProcess}" outcome="/pages/processEdit" icon="ui-icon-plusthick" />
+                    <p:menuitem value="#{msgs.newBatch}" icon="ui-icon-plusthick" />
+                </p:menuButton>
+            </h:form>
+            <!-- filters -->
+            <p:button id="search" value="#{msgs.nachEinemBandSuchen}"
+                      icon="fa fa-search" iconPos="right"
+                      styleClass="button-filled-blue" outcome="searchProcess"/>
+            <h:form id="filterMenu">
+                <div class="ui-inputgroup">
+                    <p:inputText forceId="true" id="filterfield" value="#{ProzessverwaltungForm.filter}" placeholder="#{msgs.filter}"/>
+                    <p:commandButton id="applyFilter" onclick="applyFilter(document.getElementById('filterMenu:filterfield').value)" icon="fa fa-refresh fa-lg" styleClass="button-blue"/>
+                    <p:commandButton id="filterMenuTrigger" icon="fa fa-chevron-down" styleClass="button-filled-blue"/>
+                    <p:overlayPanel for="filterMenuTrigger" my="right top" at="right bottom">
+                        <ul>
+                            <li>
+                                <p:commandButton id="addFilter"
+                                                 action="#{ProzessverwaltungForm.addFilterToUser}"
+                                                 icon="fa fa-floppy-o fa-lg"
+                                                 value="#{msgs.addFilter}" update="@form"/>
+                            </li>
+                            <ui:repeat value="#{ProzessverwaltungForm.userFilters}" var="filter">
                                 <li>
-                                    <p:commandButton id="addFilter"
-                                                     action="#{ProzessverwaltungForm.addFilterToUser}"
-                                                     icon="fa fa-floppy-o fa-lg"
-                                                     value="#{msgs.addFilter}" update="@form"/>
+                                    <p:commandLink value="#{filter}" onclick="setFilter('#{filter}')"/>
+                                    <p:commandLink title="#{msgs.removeFilter}" styleClass="filter-delete button-blue">
+                                        <i class="fa fa-trash-o fa-lg"/>
+                                    </p:commandLink>
                                 </li>
-                                <ui:repeat value="#{ProzessverwaltungForm.userFilters}" var="filter">
-                                    <li>
-                                        <p:commandLink value="#{filter}" onclick="setFilter('#{filter}')"/>
-                                        <p:commandLink title="#{msgs.removeFilter}" styleClass="filter-delete button-blue">
-                                            <i class="fa fa-trash-o fa-lg"/>
-                                        </p:commandLink>
-                                    </li>
-                                </ui:repeat>
-                            </ul>
-                        </p:overlayPanel>
-                    </div>
-                </h:form>
-            </p:panel>
-
-            <p:tabView id="tabs">
-                <p:tab title="#{msgs.processList}">
-                    <ui:include src="/WEB-INF/templates/includes/processes/processList.xhtml"/>
-                </p:tab>
-                <p:tab title="#{msgs.batches}">
-                    <ui:include src="/WEB-INF/templates/includes/processes/batchList.xhtml"/>
-                </p:tab>
-            </p:tabView>
-
-        </p:panel>
+                            </ui:repeat>
+                        </ul>
+                    </p:overlayPanel>
+                </div>
+            </h:form>
     </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView id="tabs">
+            <p:tab title="#{msgs.processList}">
+                <ui:include src="/WEB-INF/templates/includes/processes/processList.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.batches}">
+                <ui:include src="/WEB-INF/templates/includes/processes/batchList.xhtml"/>
+            </p:tab>
+        </p:tabView>
+    </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><a href="">#{msgs.prozesse}</a></li>
