--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -12,26 +12,26 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseEditView.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-            <h:form id="searchProcessform" onkeypress="ifEnterClick(event,'searchProcessform:absenden');">
-                <p:panel styleClass="content-header">
-                    <h3>#{msgs.nachEinemBandSuchen}</h3>
-                    <p:commandButton id="absenden"
-                                     value="#{msgs.filterAnwenden}"
-                                     action="#{SearchForm.filter}"
-                                     icon="fa fa-floppy-o fa-lg"
-                                     iconPos="right"
-                                     validateClient="true"
-                                     styleClass="button-filled-blue">
-                    </p:commandButton>
-                </p:panel>
-                <p:messages id="processSearch-messages" autoUpdate="true"/>
+    <ui:define name="contentHeader">
+        <h3>#{msgs.nachEinemBandSuchen}</h3>
+        <p:commandButton id="absenden"
+                         value="#{msgs.filterAnwenden}"
+                         action="#{SearchForm.filter}"
+                         icon="fa fa-floppy-o fa-lg"
+                         iconPos="right"
+                         validateClient="true"
+                         styleClass="button-filled-blue">
+        </p:commandButton>
+    </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView id="searchTabView">
+            <p:tab id="searchTab" title="#{msgs.details}">
                 <p:panelGrid id="processSearch-grid" rendered="#{ProzessverwaltungForm.initialize}">
                     <!-- process title -->
                     <p:row>
@@ -184,17 +184,16 @@
                                      action="searchProcess"
                                      icon="fa fa-trash-o fa-lg"
                                      iconPos="right"
-                                     update=":searchProcessform"
+                                     update="editForm"
                                      immediate="true"
                                      onclick="return confirm('#{msgs.sollDerContentWirklichGeloeschtWerden}')"/>
                 </p:panel>
-            </h:form>
-        </p:panel>
+            </p:tab>
+        </p:tabView>
     </ui:define>
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-
-        <li><a href="">#{msgs.prozesse}</a></li>
+        <li><h:link value="#{msgs.prozesse}" outcome="processes"/> </li>
         <li><a href="">#{msgs.nachEinemBandSuchen}</a></li>
     </ui:define>
 </ui:composition>
