--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -12,30 +12,25 @@
 -->
 
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
+        template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
-        <p:panel id="listWrapper">
-
-            <p:panel styleClass="content-header">
-                <h3>#{msgs.benutzerkonfiguration}</h3>
-            </p:panel>
-
-            <p:messages id="configuration-messages" autoUpdate="true" />
-
-            <p:tabView>
-                <p:tab title="#{msgs.settings}">
-                    <ui:include src="/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml"/>
-                </p:tab>
-                <p:tab title="#{msgs.passwortAendern}">
-                    <ui:include src="/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml"/>
-                </p:tab>
-            </p:tabView>
-
-        </p:panel>
+    <ui:define name="contentHeader">
+        <h3>#{msgs.benutzerkonfiguration}</h3>
     </ui:define>
+
+    <ui:define name="pageTabView">
+        <p:tabView>
+            <p:tab title="#{msgs.settings}">
+                <ui:include src="/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml"/>
+            </p:tab>
+            <p:tab title="#{msgs.passwortAendern}">
+                <ui:include src="/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml"/>
+            </p:tab>
+        </p:tabView>
+    </ui:define>
+
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
         <li><a href="">#{msgs.benutzerkonfiguration}</a></li>
